# rustacean_gpt

./: .gitignore  Cargo.toml  LICENSE  README.md
.config/: HelpText.txt  InitialSystemPrompt.txt  configuration.json
SharpTokenCaller/: Program.cs  SharpTokenCaller.csproj
ai_working_directory/: requirements.json
config/: InitialSystemPrompt.txt  configuration example.json
documentation/: Flow.drawio
src/: action.rs  ai_response.rs  async_openai_extensions.rs  main.rs  main_loop.rs  tokenizer.rs
src/agent/: mod.rs  response.rs
src/agent/openai/: agent.rs  mod.rs
src/configuration/: agent.rs  configuration.rs  memory.rs  mod.rs  system.rs
src/memory/: memory_data.rs  mod.rs  pinecone.rs
src/memory/pinecone/: api.rs  endpoint.rs  index.rs  mod.rs  pinecone.rs
src/open_ai/: ai_response.rs  embedding.rs  mod.rs
src/project_management/: mod.rs  requirements.rs
src/system/: actions.rs  application.rs  conversation.rs  mod.rs
