[package]
name = "rustacean_gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-openai = "0.10.2"
async-trait = "0.1.68"
colored_json = "3.1.0"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde = "1.0.159"
serde_json = "1.0.95"
strum = "0.24.1"
strum_macros = "0.24.3"
termion = "2.0.1"
tiktoken-rs = "0.4.1"
tokio = { version = "1.27.0", features = ["full"] }
